# Stoic-Steering

./: .gitignore  CLAUDE.md  LICENSE  README.md  REPRODUCTION_PLAN.md  pyproject.toml
data/: MANIFEST.sha256
docs/: corpus-sources.md  measurement-artifact.md
results/: README.md
results/dilemmas_v3_calibration/: calibration_20260721_124008.json  calibration_20260721_133732.json  calibration_20260721_143403.json  calibration_20260721_145816.json  calibration_20260721_153209.json
results/exp12_circuits/: exp12_20260706_231538.json  exp12_20260707_163121.json  exp12_reanalysis_modifier_20260708_155216.md  exp12_sweep_20260708_124712.json  exp12_sweep_precheck_20260707_172559.json
results/stage0_determinism/: determinism_20260703_002125.json
results/stage1_dilemma_baseline/: baseline_20260703_003124.json  baseline_20260717_103814.json
results/stage2_steering/: steering_20260703_132438.json
results/stage3_content_judge/: content_20260704_192154.json  content_sampled_20260705_001353.json
results/stage4_lora_dilemmas/: lora_dilemmas_20260705_225558.json  lora_dilemmas_20260717_152132.json
results/style_validation/: style_20260705_212411.json
scripts/: exp12_add_attention_edges.py  exp12_circuit_analysis.py  exp12_reanalysis_modifier.py  exp12_sweep.py  fetch_artifacts.py  make_figures.py
stoic/: __init__.py  __main__.py  calibrate.py  config.py  corpus.py  dilemmas.py  judge.py  lora.py  model.py  pairs.py  results_io.py  secrets.py  steering.py
stoic/stages/: __init__.py  adapters.py  calibrate.py  content.py  passb.py  verify.py
tests/: conftest.py  test_calibrate.py  test_cli.py  test_config.py  test_decoding.py  test_dilemmas.py  test_fixtures.py  test_reference_readonly.py  test_stats.py  test_steering.py
(+20 files in other folders)
